# tk-cargo-generate

./: .gitignore  2  README.md  cargo-generate.toml  me  sync
.github/: dependabot.yml  settings.yml
.github/scripts/: check_test.sh  check_test_fmt.sh
.github/workflows/: build.yml
bak/base/: cargo-generate.toml
bak/workspace/: .gitignore  APACHE2  README.md
base/: .clippy.toml  Cargo.toml  LICENSE-MIT  README.md  cargo-generate.toml
base/.github/: settings.yml
base/.github/scripts/: check_test_fmt.sh
base/src/: main.rs  tests.rs
base/src/utils/: error.rs  mod.rs  setup.rs
cgen/: .gitignore  .taplo.toml  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  cargo-generate.toml  rustfmt.toml
cgen/.github/scripts/: check_test.sh
cgen/.github/workflows/: ci.yml
cgen/src/: cli.rs  lib.rs  main.rs  utils.rs
cgen/src/utils/: cli.rs  error.rs  mod.rs  setup.rs
cgen/tests/: tests.rs
cgt/: APACHE2  Cargo.toml  README.md
cgt/src/: error.rs  lib.rs  tests.rs
components/bench_harness/benches/: bench.rs
dotfiles/: .gitignore
lib/: .gitignore  .justfile  .rustfmt.toml  .taplo.toml  Cargo.toml  README.md  cargo-generate.toml
lib-bak/: cargo-generate.toml
lib/.github/: settings.yml
lib/.github/scripts/: check_test_fmt.sh  lint.sh
lib/src/: lib.rs  tests.rs
rhai/: workspace.rhai
template/: .env  .gitignore  .justfile  Cargo.toml  README.md  Secrets.toml  Shuttle.toml  cargo-generate.toml  newcommand.fish
template/.github/: dependabot.yml  settings.yml
template/.github/workflows/: dependabot_automerge.yml  shuttle-deploy.yml
template/benches/: bench.rs
template/cgt/: .gitignore  Cargo.toml  LICENSE-MIT
template/cgt/src/: error.rs  tests.rs
template/src/: cli.rs  error.rs  lib.rs  main.rs  tests.rs  utils.rs
template/tests/: tests.rs
testlib/: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
testlib/.github/: settings.yml
testlib/src/: error.rs  utils.rs
testt/: CONTRIBUTING.md  Cargo.toml  README.md
testt/.github/: settings.yml
testt/.github/scripts/: fmt_toolchain.sh
testt/.github/workflows/: dependabot_automerge.yml
testt/benches/: bench.rs
testt/src/: cli.rs  utils.rs
workspace/: Cargo.toml  README.md  cargo-generate.toml
