[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"
authors = ["{{authors}}"]
repository = "https://github.com/thor314/{{project-name}}"
description = """{{description}}"""
license = "Unlicense OR MIT"

[dependencies]
{%- if crate_type == "bin" %}
# Binary
dotenv = "0.15" # .env file parsing
clap = { version = "3.2", features = ["derive"] }
validator = { version = "0.15", features = ["derive"] }

{%- endif %}
# Common
# optional => can use in a feature, otherwise, ignored; remove optional to use normally.
cfg-if = { version = "1.0.0", optional = true} # branching compilation logic
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
rand = { version = "0.8", optional = true }
# https://rhai.rs/book/start/features.html
rhai = { version = "1.8.0", optional = true } # scripting lanugage, yeet
{%- if crate_type == "lib" %}
validator = { version = "0.15", features = ["derive"], optional = true}
{%- endif %}

# Occasionally useful convenience macros and APIs
cute =  { version = "0.3", optional = true } # python-like list comprehensions: c!
kiam = { version = "0.1.1", optional = true } # a kotlin-like macro for prettier conditionals: when!
tap = { version = "1.0.1", optional = true } # {tap,pipe} combinator ownership plumbing utils

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

{%- if async == true %}
# Async dependencies
tokio = { version = "1", features = ["full"] }
futures =  { version ="0.3", features = ["executor", "thread-pool"] } 

tokio-stream = { version = "0.1.9", optional = true } # tokio 1.0 didn't ship with stream utilities, either use this or futures
tasky = { version = "3.0.1", optional = true } # a lazy explicit task runner
futures_concurrency = { version = "3.0.1", optional = true } # the convenient join API your mother warned you about
merge-streams = { version = "0.1.2", optional = true } # merge streams into a single Stream

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
{%- else %}
# Logging
log = "0.4" 
env_logger = "0.9"
{%- endif %}

# Your dependencies


[features]
some_feature = ["dep:serde","dep:serde_json"] # use this to use optional dependencies

[dev-dependencies]
# Bench
criterion = "0.3"
iai = "0.1" # criterion alternative
# Testing utils
{%- if async == true %}
test-log =  { version = "0.2", default-features = false, features = ["trace"] } 
{%- else %}
test-log = "0.2" # log/tracing independent test-log consumer
{%- endif %}
rstest = "0.15"
quickcheck = "1.0"
quickcheck_macros = "1" # derive 
arbitrary = { version = "1.1", features = ["derive"] }

[[test]]
name = "integration"
path = "tests/tests.rs"

[[bench]]
name = "bench"
harness = false
