[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"
authors = ["{{authors}}"]
repository = "https://github.com/thor314/{{project-name}}"
description = """{{description}}"""
license = "Unlicense OR MIT"

[dependencies]
{%- if crate_type == "bin" %}
# Binary
dotenv = "0.15" # .env file parsing
clap = { version = "3.2", features = ["derive"] }
validator = { version = "0.15", features = ["derive"] }

{%- endif %}
# Common
# itertools = "0.10.3" # danielkeep.github.io/itercheat_baked.html
# cfg-if = "1.0.0" # branching compilation logic
# serde = { version = "1", features = ["derive"] }
# serde_json = { version = "1.0" }
# rand = { version = "0.8" }
# https://rhai.rs/book/start/features.html
# rhai = { version = "1.8.0" } # scripting lanugage, yeet
{%- if crate_type == "lib" %}
# validator = { version = "0.15", features = ["derive"]}
{%- endif %}

# Occasionally useful convenience macros and APIs
# cute = "0.3"     # python-like list comprehensions: c!
# kiam = "0.1.1"   # macro for prettier conditionals: when!
# tap =  "1.0.1"   # {tap,pipe} combinator ownership plumbing utils
# rayon = "1.5.3"  # speeding parallel processing of Iterators
# tylift = "0.3.5" # type macro, lift enum variants into types
# delegate = "0.7.0" # macro to forward method calls to inner types

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

{%- if async == true %}
# Async dependencies
tokio = { version = "1", features = ["full"] }
futures =  { version ="0.3", features = ["executor", "thread-pool"] } 

# actix = "0.11.0" # actix: ergonomic actor framework
# actix-rt = "2.2" # <-- Runtime for actix

# More flexible/performant channel tools than std
# crossbeam_channel = "0.5.6" 
# tokio-stream = "0.1.9" # tokio 1.0 didn't ship with stream utilities, either use this or futures
# tasky = "3.0.1" # a lazy explicit task runner, nightly only
futures-concurrency = "3.0.1" # the convenient join API your mother warned you about
merge-streams = "0.1.2" # merge streams into a single Stream

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
{%- else %}
# Logging
log = "0.4" 
env_logger = "0.9"
{%- endif %}

# Your dependencies


[features]
some_feature = ["dep:serde","dep:serde_json"] # use this to use optional dependencies

[dev-dependencies]
# Bench
criterion = "0.3"
iai = "0.1" # criterion alternative
# Testing utils
{%- if async == true %}
test-log =  { version = "0.2", default-features = false, features = ["trace"] } 
{%- else %}
test-log = "0.2" # log/tracing independent test-log consumer
{%- endif %}
rstest = "0.15"
quickcheck = "1.0"
quickcheck_macros = "1" # derive 
arbitrary = { version = "1.1", features = ["derive"] }

[[test]]
name = "integration"
path = "tests/tests.rs"

[[bench]]
name = "bench"
harness = false
