[package]
authors    ="{{authors}}"
description="""{{description}}"""
edition    ="2021"
license    ="Unlicense OR MIT"
name       ="{{project-name}}"
repository ="https://github.com/thor314/{{project-name}}"
version    ="0.1.0"

[dependencies]
{%- if crate_type == "bin" %}
# Binary
clap     ={ version="3.2", features=["derive"] }
dotenv   ="0.15"                                  # .env file parsing
validator={ version="0.15", features=["derive"] }

{%- endif %}
# Common
# itertools = "0.10.3" # danielkeep.github.io/itercheat_baked.html
# cfg-if = "1.0.0" # branching compilation logic
# serde = { version = "1", features = ["derive"] }
# serde_json = { version = "1.0" }
# rand = { version = "0.8" }
# https://rhai.rs/book/start/features.html
# rhai = { version = "1.8.0" } # scripting lanugage, yeet
{%- if crate_type == "lib" %}
# validator = { version = "0.15", features = ["derive"]}
{%- endif %}

# Occasionally useful convenience macros and APIs
# async-trait = "0.1.56" # macro to write `async fn` inside traits
# cute = "0.3"           # python-like list comprehensions: c!
# delegate = "0.7.0"     # macro to forward method calls to inner types
# kiam = "0.1.1"         # macro for prettier conditionals: when!
# rayon = "1.5.3"        # speeding parallel processing of Iterators
# tap =  "1.0.1"         # {tap,pipe} combinator ownership plumbing utils
# tylift = "0.3.5"       # type macro, lift enum variants into types

# Error Handling
anyhow   ="1.0"
thiserror="1.0"
# Logging
env_logger="0.9"
log       ="0.4"

clap = { version = "3.2", features = ["derive"] }
dotenv = "0.15" # .env file parsing
validator = { version = "0.15", features = ["derive"] }

{%- if async == true %}
# Async dependencies
futures = { version ="0.3", features = ["executor", "thread-pool"] } 
tokio   = { version = "1", features = ["full"] }
# actix = "0.11.0" # actix: ergonomic actor framework
# actix-rt = "2.2" # <-- Runtime for actix
# crossbeam = "0.8.6" # concurrency tool subcrates
# crossbeam_channel = "0.5.6" # more flexible & performant channels
# tokio-stream = "0.1.9" # tokio 1.0 didn't ship with stream utilities
# tasky = "3.0.1" # a lazy explicit task runner, nightly only
# futures-concurrency = "3.0.1" # the convenient join API your mother warned you about
# merge-streams = "0.1.2" # merge streams into a single Stream

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
{%- else %}
# Logging
log = "0.4" 
env_logger = "0.9"
{%- endif %}

# Your dependencies

[features]
# some_feature = ["dep:serde","dep:serde_json"] # use this to use optional dependencies

[dev-dependencies]
# Bench
criterion = "0.3"
iai = "0.1" # criterion alternative

# Testing utils
arbitrary = { version = "1.1", features = ["derive"] } # see quickcheck
{%- if async == true %}
test-log =  { version = "0.2", default-features = false, features = ["trace"] } 
{%- else %}
test-log = "0.2"        # log/tracing independent test-log consumer
{%- endif %}
quickcheck = "1.0"      # lowkey proptest suite
quickcheck_macros = "1" # derive 
rstest = "0.15"         # testing convenience proc-macros

[[test]]
name = "integration"
path = "tests/tests.rs"

[[bench]]
name = "bench"
harness = false
