[package]
authors    =["Thor Kamphefner <thorck@pm.me>"]
description="""test cgt"""
edition    ="2021"
name       ="cgt"
repository ="https://github.com/thor314/cgt"
version    ="0.1.0"

[dependencies]
anyhow   ="1.0"


[dev-dependencies]
log       ="0.4"
criterion ="0.4"
rstest    ="0.16"         # testing convenience proc-macros
test-log  ="0.2"        # log/tracing independent test-log consumer
# test-log =  { version = "0.2", default-features = false, features = ["trace"] } 

arbitrary         ={ version = "1.1", features = ["derive"] } # see quickcheck
quickcheck        ="1.0"      # lowkey proptest suite
quickcheck_macros ="1" # derive 




