[package]
authors    =["{{authors}}"]
description="""{{description}}"""
edition    ="2021"
{% if license -%}
license    ="Apache2.0 OR MIT"
{% endif -%}
name       ="{{project-name}}"
repository ="https://github.com/thor314/{{project-name}}"
version    ="0.1.0"

[dependencies]
anyhow   ="1.0"
cute = "0.3.0"
{% if async -%}
tracing = "0.1"
tracing-subscriber={ version="0.3", features=["env-filter", "fmt"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3" 
# reqwest = "0.11.24"
{% else -%}
log       ="0.4" 
{% endif -%}
{% if crate_type == "bin" -%}
thiserror="1.0"
env_logger = "0.11"
{% if server %} {% else -%} dotenvy = "0.15" {% endif %}
{% endif -%}
{% if cli -%}
clap = {version = "4.4.16", features = ["derive"]}
clap_complete = "4.5.1"
delegate = "0.12.0" # useful for subcommand-style cli
{% endif -%}
{% if server -%}
axum = { version = "0.7.3", features = ["macros"] }
shuttle-axum = "0.39.0"
shuttle-runtime = { version = "0.39", default-features = false }
serde = { version = "1.0.196", features = ["derive"] }
shuttle-secrets = "0.39.0"
serde_json = "1.0.113"
# axum-extra = { version = "0.9.2", features = ["cookie", "typed-header"] }
# tower-http = { version = "0.5.1", features = ["fs"] }
# shuttle-shared-db = { version = "0.39.0", features = ["postgres", "sqlx"] } 
# sqlx = { version = "0.7.3", features = ["postgres"] }
# diesel = { version = "2.1.4", features = ["postgres"] }
# shuttle-diesel-async = { git = "https://github.com/aumetra/shuttle-diesel-async", version = "0.1.0" }
# diesel-async = { version = "0.4.1", features = ["postgres"] }
{% endif %}

[dev-dependencies]
rstest    ="0.18"         # testing convenience proc-macros
{% if crate_type == "lib" -%}
env_logger="0.11"
{% endif -%}
{% if benches -%}
criterion ="0.5"
{% endif -%}
{% if itests -%}
arbitrary         ={ version = "1.1", features = ["derive"] } # see quickcheck
quickcheck        ="1.0"      # lowkey proptest suite
quickcheck_macros ="1" # derive 
{% endif -%}

{% if benches -%}
[[bench]]
name = "bench"
harness = false
{% endif -%}
